--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@ title: Home
 </section>
 
 {% for post in site.posts %}
-  <section class="wrapper article style1">
-    <div class="inner">
-      <div class="content">
-        <h3><a href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}">{{ post.title }}</a></h3>
-        <span>{{ post.date | date: "%b %-d, %Y" }}</span>
-          {% for tagitem in post.tags %}
-            &nbsp;<a href="{{ site.baseurl }}tags/#{{ tagitem }}" >{{ tagitem }}</a>
-          {% endfor %}
-        <p>{{ post.excerpt }}</p>
-        <a class="button small" href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}">Learn more &gt;&gt;</a>
-      </div>
+<section class="wrapper article style1">
+  <div class="inner">
+    <div class="content">
+      <h3><a href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}index.html">{{ post.title }}</a></h3>
+      <span>{{ post.date | date: "%b %-d, %Y" }}</span>
+      {% for tagitem in post.tags %}
+      &nbsp;<a href="{{ site.baseurl }}tags/#{{ tagitem }}">{{ tagitem }}</a>
+      {% endfor %}
+      <p>{{ post.excerpt }}</p>
+      <a class="button small" href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}">Learn more &gt;&gt;</a>
     </div>
-  </section>
+  </div>
+</section>
 {% endfor %}
