title link change2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
 <section class="wrapper article style1">
   <div class="inner">
     <div class="content">
-      <h3><a href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}index.html">{{ post.title }}</a></h3>
+      <h3><a href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}/index.html">{{ post.title }}</a></h3>
       <span>{{ post.date | date: "%b %-d, %Y" }}</span>
       {% for tagitem in post.tags %}
       &nbsp;<a href="{{ site.baseurl }}tags/#{{ tagitem }}">{{ tagitem }}</a>
