--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ title: Home
       <h3><a href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}">{{ post.title }}</a></h3>
       <span>{{ post.date | date: "%b %-d, %Y" }}</span>
       {% for tagitem in post.tags %}
-      &nbsp;<a href="{{ site.baseurl }}tags/#{{ tagitem }}">{{ tagitem }}</a>
+      <!-- &nbsp; -->
+      <a href="{{ site.baseurl }}tags/#{{ tagitem }}">{{ tagitem }}</a>
       {% endfor %}
       <p>{{ post.excerpt }}</p>
       <a class="button small" href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}">Learn more &gt;&gt;</a>
