--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
       <h3><a href="{{ site.baseurl }}{{ post.url | replace_first: '/' }}">{{ post.title }}</a></h3>
       <span>{{ post.date | date: "%b %-d, %Y" }}</span>
       {% for tagitem in post.tags %}
-      <!-- &nbsp; -->
+      &nbsp;
       <a href="{{ site.baseurl }}tags/#{{ tagitem }}">{{ tagitem }}</a>
       {% endfor %}
       <p>{{ post.excerpt }}</p>
