--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 <section id="main" class="wrapper">
   <header>
-    <h2>HOME</h2>
-    <p>go on writing, record the life, the happiness and the love.</p>
+    <h2>I am Bak Cheong-kyung</h2>
+    <p>노력으로 발전하는 개발자입니다.</p>
   </header>
 </section>
 
