--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <section id="main" class="wrapper">
   <header>
     <h2>I am Bak Cheong-kyung</h2>
-    <p>노력으로 발전하는 개발자입니다.</p>
+    <p><strong>노력으로 발전하는 개발자</strong>입니다.</p>
   </header>
 </section>
 
